TPv2 Fix Miscellaneous issues (#7813)
* Fix sidebar not covering bottom

* Fix theme-manager and detect color scheme

* Add wrapping

* Fix tests

---------

--- a/experimental/traffic-portal/src/app/shared/navigation/tp-sidebar/tp-sidebar.component.scss
+++ b/experimental/traffic-portal/src/app/shared/navigation/tp-sidebar/tp-sidebar.component.scss
@@ -33,7 +33,7 @@ $actions-height: 38px;
 			#actions-container {
 				z-index: 10;
 				position: absolute;
-				bottom: 6px;
+				bottom: 0;
 				left: 0;
 				width: 100%;
 				height: $actions-height;
